--- a/samples/presets/fireworks.html
+++ b/samples/presets/fireworks.html
@@ -150,7 +150,7 @@
             (async () => {
                 await loadFireworksPreset(tsParticles);
 
-                await tsParticles.load("tsparticles", { preset: "fireworks" });
+                await tsParticles.load({ id: "tsparticles", options: { preset: "fireworks" } });
             })();
         </script>
     </body>
