--- a/samples/presets/fountain.html
+++ b/samples/presets/fountain.html
@@ -150,7 +150,7 @@
             (async () => {
                 await loadFountainPreset(tsParticles);
 
-                await tsParticles.load("tsparticles", { preset: "fountain" });
+                await tsParticles.load({ id: "tsparticles", options: { preset: "fountain" } });
             })();
         </script>
     </body>
