--- a/samples/presets/links.html
+++ b/samples/presets/links.html
@@ -150,7 +150,7 @@
             (async () => {
                 await loadLinksPreset(tsParticles);
 
-                await tsParticles.load("tsparticles", { preset: "links" });
+                await tsParticles.load({ id: "tsparticles", options: { preset: "links" } });
             })();
         </script>
     </body>
