--- a/samples/presets/hyperspace.html
+++ b/samples/presets/hyperspace.html
@@ -150,7 +150,7 @@
             (async () => {
                 await loadHyperspacePreset(tsParticles);
 
-                await tsParticles.load("tsparticles", { preset: "hyperspace" });
+                await tsParticles.load({ id: "tsparticles", options: { preset: "hyperspace" } });
             })();
         </script>
     </body>
