--- a/samples/presets/seaAnemone.html
+++ b/samples/presets/seaAnemone.html
@@ -150,7 +150,7 @@
             (async () => {
                 await loadSeaAnemonePreset(tsParticles);
 
-                await tsParticles.load("tsparticles", { preset: "seaAnemone" });
+                await tsParticles.load({ id: "tsparticles", options: { preset: "seaAnemone" } });
             })();
         </script>
     </body>
