--- a/samples/index.html
+++ b/samples/index.html
@@ -130,7 +130,7 @@
         </style>
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-922Z47NPS0"></script>
+        <script async defer src="https://www.googletagmanager.com/gtag/js?id=G-922Z47NPS0"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
 
@@ -588,6 +588,7 @@
                         <div class="col p-0">
                             <script
                                 async
+                                defer
                                 type="text/javascript"
                                 src="//cdn.carbonads.com/carbon.js?serve=CEAI6KJL&placement=particlesjsorg"
                                 id="_carbonads_js"
@@ -700,45 +701,51 @@
             })(window, document, "clarity", "script", "8q4bxin4tm");
         </script>
         <script
+            defer
             src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
             crossorigin="anonymous"
         ></script>
         <script
+            defer
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
             integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
             crossorigin="anonymous"
         ></script>
         <script
+            defer
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
             integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
             crossorigin="anonymous"
         ></script>
         <script
+            defer
             src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.0/js/fontawesome.min.js"
             integrity="sha256-NP9NujdEzS5m4ZxvNqkcbxyHB0dTRy9hG13RwTVBGwo="
             crossorigin="anonymous"
         ></script>
         <script
+            defer
             src="https://cdn.jsdelivr.net/npm/jsoneditor@8.6.3/dist/jsoneditor.min.js"
             integrity="sha256-iha/QQwSuta8sBMrJ7j9cR7WF/duYY3RmJy+1JIYWjU="
             crossorigin="anonymous"
         ></script>
         <script
+            defer
             src="https://cdn.jsdelivr.net/npm/stats.ts@1.1.0/dist/stats.min.js"
             integrity="sha256-WPj1kJMqFC8e1B4yBtOJ3OPV31gGsJydT6D4Dg6JMww="
             crossorigin="anonymous"
         ></script>
         <script
+            defer
             src="https://cdn.jsdelivr.net/npm/lodash@4.17.20/lodash.min.js"
             integrity="sha256-ur/YlHMU96MxHEsy3fHGszZHas7NzH4RQlD4tDVvFhw="
             crossorigin="anonymous"
         ></script>
         <script async defer src="https://buttons.github.io/buttons.js"></script>
 
-        <script src="https://cdn.jsdelivr.net/npm/@tsparticles/all@3.0.3/tsparticles.all.bundle.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@tsparticles/configs@3.0.3/tsparticles.configs.min.js"></script>
-
-        <script src="../js/demo.min.js"></script>
+        <script defer src="https://cdn.jsdelivr.net/npm/@tsparticles/all@3.0.3/tsparticles.all.bundle.min.js"></script>
+        <script defer src="https://cdn.jsdelivr.net/npm/@tsparticles/configs@3.0.3/tsparticles.configs.min.js"></script>
+        <script defer src="../js/demo.min.js"></script>
     </body>
 </html>
