--- a/404.html
+++ b/404.html
@@ -165,11 +165,12 @@
             })(window, document, "clarity", "script", "8q4bxin4tm");
         </script>
         <script
+            defer
             src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.0/js/fontawesome.min.js"
             integrity="sha256-NP9NujdEzS5m4ZxvNqkcbxyHB0dTRy9hG13RwTVBGwo="
             crossorigin="anonymous"
         ></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles@3.0.3/tsparticles.bundle.min.js"></script>
-        <script src="/js/404.min.js"></script>
+        <script defer src="https://cdn.jsdelivr.net/npm/tsparticles@3.0.3/tsparticles.bundle.min.js"></script>
+        <script defer src="/js/404.min.js"></script>
     </body>
 </html>
