--- a/samples/presets/bigCircles.html
+++ b/samples/presets/bigCircles.html
@@ -147,12 +147,12 @@
         </script>
         <script
             async
+            defer
             type="text/javascript"
             src="//cdn.carbonads.com/carbon.js?serve=CEAI6KJL&placement=particlesjsorg"
             id="_carbonads_js"
         ></script>
         <script src="https://cdn.jsdelivr.net/npm/@tsparticles/preset-big-circles@3.0.2/tsparticles.preset.bigCircles.bundle.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.3.1/build/highlight.min.js"></script>
         <script type="text/javascript">
             (async () => {
                 await tsParticles.load({
