--- a/samples/presets/confetti.html
+++ b/samples/presets/confetti.html
@@ -146,6 +146,7 @@
         </script>
         <script
             async
+            defer
             type="text/javascript"
             src="//cdn.carbonads.com/carbon.js?serve=CEAI6KJL&placement=particlesjsorg"
             id="_carbonads_js"
