--- a/samples/presets/hyperspace.html
+++ b/samples/presets/hyperspace.html
@@ -143,6 +143,7 @@
         </script>
         <script
             async
+            defer
             type="text/javascript"
             src="//cdn.carbonads.com/carbon.js?serve=CEAI6KJL&placement=particlesjsorg"
             id="_carbonads_js"
