--- a/samples/presets/links.html
+++ b/samples/presets/links.html
@@ -111,7 +111,7 @@
         </style>
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-922Z47NPS0"></script>
+        <script async defer src="https://www.googletagmanager.com/gtag/js?id=G-922Z47NPS0"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag() {
@@ -141,6 +141,7 @@
         </script>
         <script
             async
+            defer
             type="text/javascript"
             src="//cdn.carbonads.com/carbon.js?serve=CEAI6KJL&placement=particlesjsorg"
             id="_carbonads_js"
