--- a/video.html
+++ b/video.html
@@ -116,7 +116,7 @@
         </style>
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-922Z47NPS0"></script>
+        <script async defer src="https://www.googletagmanager.com/gtag/js?id=G-922Z47NPS0"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag() {
@@ -194,21 +194,25 @@
         </script>
         <script
             async
+            defer
             type="text/javascript"
             src="//cdn.carbonads.com/carbon.js?serve=CEAI6KJL&placement=particlesjsorg"
             id="_carbonads_js"
         ></script>
         <script
+            defer
             src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"
             integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
             crossorigin="anonymous"
         ></script>
         <script
+            defer
             src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
             integrity="sha256-/ijcOLwFf26xEYAjW75FizKVo5tnTYiQddPZoLUHHZ8="
             crossorigin="anonymous"
         ></script>
         <script
+            defer
             src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
             integrity="sha256-7dA7lq5P94hkBsWdff7qobYkp9ope/L5LQy2t/ljPLo="
             crossorigin="anonymous"
