--- a/samples/presets/index.html
+++ b/samples/presets/index.html
@@ -263,6 +263,18 @@
                 </div>
                 <div class="col-4 mt-3 mb-3">
                     <div class="card text-white bg-dark">
+                        <img class="card-img-top" src="/images/presets/squares.png" alt="Stars" />
+                        <div class="card-body">
+                            <h5 class="card-title">Squares</h5>
+                            <p class="card-text">Squares preset demo</p>
+                        </div>
+                        <div class="card-footer text-right">
+                            <a class="btn btn-primary" href="squares.html" target="_blank">See demo</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 mt-3 mb-3">
+                    <div class="card text-white bg-dark">
                         <img class="card-img-top" src="/images/presets/stars.png" alt="Stars" />
                         <div class="card-body">
                             <h5 class="card-title">Stars</h5>
