--- a/samples/presets/bigCircles.html
+++ b/samples/presets/bigCircles.html
@@ -152,16 +152,18 @@
             src="//cdn.carbonads.com/carbon.js?serve=CEAI6KJL&placement=particlesjsorg"
             id="_carbonads_js"
         ></script>
-        <script src="https://cdn.jsdelivr.net/npm/@tsparticles/preset-big-circles@3.0.2/tsparticles.preset.bigCircles.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@tsparticles/preset-big-circles@3.2.0/tsparticles.preset.bigCircles.bundle.min.js"></script>
         <script type="text/javascript">
-            (async () => {
-                await tsParticles.load({
+            (async (engine) => {
+                await loadBigCirclesPreset(engine);
+
+                await engine.load({
                     id: "tsparticles",
                     options: {
                         preset: "bigCircles",
                     },
                 });
-            })();
+            })(tsParticles);
         </script>
     </body>
 </html>
