--- a/samples/presets/squares.html
+++ b/samples/presets/squares.html
@@ -1,10 +1,7 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>
-            tsParticles | 404 Not Found | JavaScript Particles, Confetti and Fireworks animations for your website
-        </title>
         <link rel="shortcut icon" href="https://particles.js.org/tsParticles-64.png" />
         <meta
             name="description"
@@ -36,14 +33,10 @@
             content="Easily create highly customizable particles, confetti and fireworks animations and use them as animated backgrounds for your website. Ready to use components available for React, Vue.js (2.x and 3.x), Angular, Svelte, jQuery, Preact, Inferno."
         />
         <meta property="og:image" content="https://particles.js.org/images/demo2.png" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link
-            rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.0/css/all.min.css"
-            integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ="
-            crossorigin="anonymous"
-        />
-        <link rel="stylesheet" href="/css/404.min.css" />
+        <title>
+            tsParticles | Stars Preset | JavaScript Particles, Confetti and Fireworks animations for your website
+        </title>
+        <link rel="stylesheet" href="/css/presets.min.css" />
         <style>
             #carbonads * {
                 margin: initial;
@@ -61,7 +54,6 @@
                 background-color: hsl(0, 0%, 98%);
                 box-shadow: 0 1px 4px 1px hsla(0, 0%, 0%, 0.1);
                 z-index: 100;
-                margin: 0 auto;
             }
 
             #carbonads a {
@@ -117,39 +109,22 @@
                 right: 0;
             }
         </style>
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-922Z47NPS0"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
+
+            gtag("config", "G-922Z47NPS0");
+        </script>
     </head>
 
     <body>
-        <div class="container">
-            <div class="overlay" id="tsparticles"></div>
-            <div class="content">
-                <div class="message">
-                    <p class="message-heading">Error 404</p>
-                    <p class="message-description">
-                        The page you are looking for was moved, removed, renamed or might never have existed.
-                        <script
-                            async
-                            type="text/javascript"
-                            src="//cdn.carbonads.com/carbon.js?serve=CEAI6KJL&placement=particlesjsorg"
-                            id="_carbonads_js"
-                        ></script>
-                    </p>
-                </div>
-                <div class="links">
-                    <a href="https://particles.js.org/"></a>
-                </div>
-            </div>
-            <div class="social">
-                <ul class="social-list">
-                    <li>
-                        <a href="https://github.com/matteobruni/tsparticles"><i class="fab fa-github"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://codepen.io/matteobruni"><i class="fab fa-codepen"></i></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+        <div id="tsparticles"></div>
         <script type="text/javascript">
             (function (c, l, a, r, i, t, y) {
                 c[a] =
@@ -165,12 +140,19 @@
             })(window, document, "clarity", "script", "8q4bxin4tm");
         </script>
         <script
+            async
             defer
-            src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.0/js/fontawesome.min.js"
-            integrity="sha256-NP9NujdEzS5m4ZxvNqkcbxyHB0dTRy9hG13RwTVBGwo="
-            crossorigin="anonymous"
+            type="text/javascript"
+            src="//cdn.carbonads.com/carbon.js?serve=CEAI6KJL&placement=particlesjsorg"
+            id="_carbonads_js"
         ></script>
-        <script defer src="https://cdn.jsdelivr.net/npm/tsparticles@3.7.1/tsparticles.bundle.min.js"></script>
-        <script defer src="/js/404.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@tsparticles/preset-squares@3.2.0/tsparticles.preset.squares.bundle.min.js"></script>
+        <script type="text/javascript">
+            (async (engine) => {
+                await loadSquaresPreset(engine);
+
+                await engine.load({ id: "tsparticles", options: { preset: "squares" } });
+            })(tsParticles);
+        </script>
     </body>
 </html>
