fix: fixed issue with samples

--- a/samples/index.html
+++ b/samples/index.html
@@ -186,55 +186,55 @@
                                     Presets
                                 </a>
                                 <div class="dropdown-menu preset-menu" aria-labelledby="navbarPresetsDropdown">
-                                    <a class="dropdown-item preset-item" data-preset="Absorbers" href="#">Absorbers</a>
-                                    <a class="dropdown-item preset-item" data-preset="Among Us" href="#">Among Us</a>
-                                    <a class="dropdown-item preset-item" data-preset="Background Mask" href="#"
+                                    <a class="dropdown-item preset-item" data-preset="absorbers" href="#">Absorbers</a>
+                                    <a class="dropdown-item preset-item" data-preset="amongUs" href="#">Among Us</a>
+                                    <a class="dropdown-item preset-item" data-preset="backgroundMask" href="#"
                                         >Background Mask</a
                                     >
-                                    <a class="dropdown-item preset-item" data-preset="Basic" href="#">Basic</a>
-                                    <a class="dropdown-item preset-item" data-preset="Big Particles" href="#"
+                                    <a class="dropdown-item preset-item" data-preset="basic" href="#">Basic</a>
+                                    <a class="dropdown-item preset-item" data-preset="big" href="#"
                                         >Big Particles</a
                                     >
-                                    <a class="dropdown-item preset-item" data-preset="Bubble" href="#">Bubble</a>
-                                    <a class="dropdown-item preset-item" data-preset="Collisions Bounce" href="#"
+                                    <a class="dropdown-item preset-item" data-preset="bubble" href="#">Bubble</a>
+                                    <a class="dropdown-item preset-item" data-preset="collisionsBounce" href="#"
                                         >Collisions</a
                                     >
-                                    <a class="dropdown-item preset-item" data-preset="Wobble" href="#">Confetti</a>
-                                    <a class="dropdown-item preset-item" data-preset="Connect" href="#">Connect</a>
-                                    <a class="dropdown-item preset-item" data-preset="Emitter and Absorber" href="#"
+                                    <a class="dropdown-item preset-item" data-preset="wobble" href="#">Confetti</a>
+                                    <a class="dropdown-item preset-item" data-preset="connect" href="#">Connect</a>
+                                    <a class="dropdown-item preset-item" data-preset="emitterAbsorber" href="#"
                                         >Emitter and Absorber</a
                                     >
-                                    <a class="dropdown-item preset-item" data-preset="Emitter" href="#">Emitters</a>
-                                    <a class="dropdown-item preset-item" data-preset="Font Awesome" href="#"
+                                    <a class="dropdown-item preset-item" data-preset="emitter" href="#">Emitters</a>
+                                    <a class="dropdown-item preset-item" data-preset="fontawesome" href="#"
                                         >Font Awesome</a
                                     >
-                                    <a class="dropdown-item preset-item" data-preset="Growing" href="#"
+                                    <a class="dropdown-item preset-item" data-preset="growing" href="#"
                                         >Growing Particles</a
                                     >
-                                    <a class="dropdown-item preset-item" data-preset="Image Mask" href="#"
+                                    <a class="dropdown-item preset-item" data-preset="imageMask" href="#"
                                         >Image Mask</a
                                     >
-                                    <a class="dropdown-item preset-item" data-preset="Images" href="#"
+                                    <a class="dropdown-item preset-item" data-preset="images" href="#"
                                         >Multiple Images</a
                                     >
-                                    <a class="dropdown-item preset-item" data-preset="Multiple Polygon Masks" href="#"
+                                    <a class="dropdown-item preset-item" data-preset="multiplePolygonMasks" href="#"
                                         >Multiple Polygon Mask</a
                                     >
-                                    <a class="dropdown-item preset-item" data-preset="NASA" href="#">NASA</a>
-                                    <a class="dropdown-item preset-item" data-preset="Nyan Cat 2" href="#">Nyan Cat</a>
-                                    <a class="dropdown-item preset-item" data-preset="Parallax" href="#">Parallax</a>
-                                    <a class="dropdown-item preset-item" data-preset="Polygon Mask" href="#"
+                                    <a class="dropdown-item preset-item" data-preset="nasa" href="#">NASA</a>
+                                    <a class="dropdown-item preset-item" data-preset="nyancat2" href="#">Nyan Cat</a>
+                                    <a class="dropdown-item preset-item" data-preset="parallax" href="#">Parallax</a>
+                                    <a class="dropdown-item preset-item" data-preset="polygonMask" href="#"
                                         >Polygon Mask</a
                                     >
-                                    <a class="dropdown-item preset-item" data-preset="Polygon Shape" href="#"
+                                    <a class="dropdown-item preset-item" data-preset="polygons" href="#"
                                         >Polygon Shape</a
                                     >
-                                    <a class="dropdown-item preset-item" data-preset="Random Colors" href="#"
+                                    <a class="dropdown-item preset-item" data-preset="random" href="#"
                                         >Random Colors</a
                                     >
-                                    <a class="dropdown-item preset-item" data-preset="Slow" href="#">Slow on Hover</a>
-                                    <a class="dropdown-item preset-item" data-preset="Snow" href="#">Snow</a>
-                                    <a class="dropdown-item preset-item" data-preset="Twinkle" href="#">Twinkle</a>
+                                    <a class="dropdown-item preset-item" data-preset="slow" href="#">Slow on Hover</a>
+                                    <a class="dropdown-item preset-item" data-preset="snow" href="#">Snow</a>
+                                    <a class="dropdown-item preset-item" data-preset="twinkle" href="#">Twinkle</a>
                                 </div>
                             </li>
                             <li class="nav-item dropdown">
@@ -385,68 +385,68 @@
                                         Presets
                                     </button>
                                     <div class="dropdown-menu preset-menu">
-                                        <a class="dropdown-item preset-item" data-preset="Absorbers" href="#"
+                                        <a class="dropdown-item preset-item" data-preset="absorbers" href="#"
                                             >Absorbers</a
                                         >
-                                        <a class="dropdown-item preset-item" data-preset="Among Us" href="#"
+                                        <a class="dropdown-item preset-item" data-preset="amongUs" href="#"
                                             >Among Us</a
                                         >
-                                        <a class="dropdown-item preset-item" data-preset="Background Mask" href="#"
+                                        <a class="dropdown-item preset-item" data-preset="backgroundMask" href="#"
                                             >Background Mask</a
                                         >
-                                        <a class="dropdown-item preset-item" data-preset="Basic" href="#">Basic</a>
-                                        <a class="dropdown-item preset-item" data-preset="Big Particles" href="#"
+                                        <a class="dropdown-item preset-item" data-preset="basic" href="#">Basic</a>
+                                        <a class="dropdown-item preset-item" data-preset="big" href="#"
                                             >Big Particles</a
                                         >
-                                        <a class="dropdown-item preset-item" data-preset="Bubble" href="#">Bubble</a>
-                                        <a class="dropdown-item preset-item" data-preset="Collisions Bounce" href="#"
+                                        <a class="dropdown-item preset-item" data-preset="bubble" href="#">Bubble</a>
+                                        <a class="dropdown-item preset-item" data-preset="collisionsBounce" href="#"
                                             >Collisions</a
                                         >
-                                        <a class="dropdown-item preset-item" data-preset="Wobble" href="#">Confetti</a>
-                                        <a class="dropdown-item preset-item" data-preset="Connect" href="#">Connect</a>
-                                        <a class="dropdown-item preset-item" data-preset="Emitter and Absorber" href="#"
+                                        <a class="dropdown-item preset-item" data-preset="wobble" href="#">Confetti</a>
+                                        <a class="dropdown-item preset-item" data-preset="connect" href="#">Connect</a>
+                                        <a class="dropdown-item preset-item" data-preset="emitterAbsorber" href="#"
                                             >Emitter and Absorber</a
                                         >
-                                        <a class="dropdown-item preset-item" data-preset="Emitter" href="#">Emitters</a>
-                                        <a class="dropdown-item preset-item" data-preset="Font Awesome" href="#"
+                                        <a class="dropdown-item preset-item" data-preset="emitter" href="#">Emitters</a>
+                                        <a class="dropdown-item preset-item" data-preset="fontawesome" href="#"
                                             >Font Awesome</a
                                         >
-                                        <a class="dropdown-item preset-item" data-preset="Growing" href="#"
+                                        <a class="dropdown-item preset-item" data-preset="growing" href="#"
                                             >Growing Particles</a
                                         >
-                                        <a class="dropdown-item preset-item" data-preset="Image Mask" href="#"
+                                        <a class="dropdown-item preset-item" data-preset="imageMask" href="#"
                                             >Image Mask</a
                                         >
-                                        <a class="dropdown-item preset-item" data-preset="Images" href="#"
+                                        <a class="dropdown-item preset-item" data-preset="images" href="#"
                                             >Multiple Images</a
                                         >
                                         <a
                                             class="dropdown-item preset-item"
-                                            data-preset="Multiple Polygon Masks"
+                                            data-preset="multiplePolygonMasks"
                                             href="#"
                                             >Multiple Polygon Mask</a
                                         >
-                                        <a class="dropdown-item preset-item" data-preset="NASA" href="#">NASA</a>
-                                        <a class="dropdown-item preset-item" data-preset="Nyan Cat 2" href="#"
+                                        <a class="dropdown-item preset-item" data-preset="nasa" href="#">NASA</a>
+                                        <a class="dropdown-item preset-item" data-preset="nyancat2" href="#"
                                             >Nyan Cat</a
                                         >
-                                        <a class="dropdown-item preset-item" data-preset="Parallax" href="#"
+                                        <a class="dropdown-item preset-item" data-preset="parallax" href="#"
                                             >Parallax</a
                                         >
-                                        <a class="dropdown-item preset-item" data-preset="Polygon Mask" href="#"
+                                        <a class="dropdown-item preset-item" data-preset="polygonMask" href="#"
                                             >Polygon Mask</a
                                         >
-                                        <a class="dropdown-item preset-item" data-preset="Polygon Shape" href="#"
+                                        <a class="dropdown-item preset-item" data-preset="polygons" href="#"
                                             >Polygon Shape</a
                                         >
-                                        <a class="dropdown-item preset-item" data-preset="Random Colors" href="#"
+                                        <a class="dropdown-item preset-item" data-preset="random" href="#"
                                             >Random Colors</a
                                         >
-                                        <a class="dropdown-item preset-item" data-preset="Slow" href="#"
+                                        <a class="dropdown-item preset-item" data-preset="slow" href="#"
                                             >Slow on Hover</a
                                         >
-                                        <a class="dropdown-item preset-item" data-preset="Snow" href="#">Snow</a>
-                                        <a class="dropdown-item preset-item" data-preset="Twinkle" href="#">Twinkle</a>
+                                        <a class="dropdown-item preset-item" data-preset="snow" href="#">Snow</a>
+                                        <a class="dropdown-item preset-item" data-preset="twinkle" href="#">Twinkle</a>
                                     </div>
                                 </div>
                                 <button class="btn btn-primary btn-xs text-center w-100" id="btnUpdate" type="button">
