build: fixed codestyle

--- a/samples/index.html
+++ b/samples/index.html
@@ -192,9 +192,7 @@
                                         >Background Mask</a
                                     >
                                     <a class="dropdown-item preset-item" data-preset="basic" href="#">Basic</a>
-                                    <a class="dropdown-item preset-item" data-preset="big" href="#"
-                                        >Big Particles</a
-                                    >
+                                    <a class="dropdown-item preset-item" data-preset="big" href="#">Big Particles</a>
                                     <a class="dropdown-item preset-item" data-preset="bubble" href="#">Bubble</a>
                                     <a class="dropdown-item preset-item" data-preset="collisionsBounce" href="#"
                                         >Collisions</a
@@ -211,9 +209,7 @@
                                     <a class="dropdown-item preset-item" data-preset="growing" href="#"
                                         >Growing Particles</a
                                     >
-                                    <a class="dropdown-item preset-item" data-preset="imageMask" href="#"
-                                        >Image Mask</a
-                                    >
+                                    <a class="dropdown-item preset-item" data-preset="imageMask" href="#">Image Mask</a>
                                     <a class="dropdown-item preset-item" data-preset="images" href="#"
                                         >Multiple Images</a
                                     >
@@ -229,9 +225,7 @@
                                     <a class="dropdown-item preset-item" data-preset="polygons" href="#"
                                         >Polygon Shape</a
                                     >
-                                    <a class="dropdown-item preset-item" data-preset="random" href="#"
-                                        >Random Colors</a
-                                    >
+                                    <a class="dropdown-item preset-item" data-preset="random" href="#">Random Colors</a>
                                     <a class="dropdown-item preset-item" data-preset="slow" href="#">Slow on Hover</a>
                                     <a class="dropdown-item preset-item" data-preset="snow" href="#">Snow</a>
                                     <a class="dropdown-item preset-item" data-preset="twinkle" href="#">Twinkle</a>
@@ -388,9 +382,7 @@
                                         <a class="dropdown-item preset-item" data-preset="absorbers" href="#"
                                             >Absorbers</a
                                         >
-                                        <a class="dropdown-item preset-item" data-preset="amongUs" href="#"
-                                            >Among Us</a
-                                        >
+                                        <a class="dropdown-item preset-item" data-preset="amongUs" href="#">Among Us</a>
                                         <a class="dropdown-item preset-item" data-preset="backgroundMask" href="#"
                                             >Background Mask</a
                                         >
@@ -420,10 +412,7 @@
                                         <a class="dropdown-item preset-item" data-preset="images" href="#"
                                             >Multiple Images</a
                                         >
-                                        <a
-                                            class="dropdown-item preset-item"
-                                            data-preset="multiplePolygonMasks"
-                                            href="#"
+                                        <a class="dropdown-item preset-item" data-preset="multiplePolygonMasks" href="#"
                                             >Multiple Polygon Mask</a
                                         >
                                         <a class="dropdown-item preset-item" data-preset="nasa" href="#">NASA</a>
