--- a/index.html
+++ b/index.html
@@ -65,80 +65,6 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/object-gui@2.0.2/dist/css/object-gui.min.css" />
 
         <link href="css/main.min.css" rel="stylesheet" type="text/css" />
-        <style>
-            #carbonads * {
-                margin: initial;
-                padding: initial;
-            }
-
-            #carbonads {
-                font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell,
-                    "Helvetica Neue", Helvetica, Arial, sans-serif;
-            }
-
-            #carbonads {
-                display: flex;
-                max-width: 330px;
-                background-color: hsl(0, 0%, 98%);
-                box-shadow: 0 1px 4px 1px hsla(0, 0%, 0%, 0.1);
-                z-index: 100;
-                color: #000;
-                margin: 0 auto;
-            }
-
-            #carbonads a {
-                color: inherit;
-                text-decoration: none;
-            }
-
-            #carbonads a:hover {
-                color: inherit;
-            }
-
-            #carbonads span {
-                position: relative;
-                display: block;
-                overflow: hidden;
-            }
-
-            #carbonads .carbon-wrap {
-                display: flex;
-            }
-
-            #carbonads .carbon-img {
-                display: block;
-                margin: 0;
-                line-height: 1;
-            }
-
-            #carbonads .carbon-img img {
-                display: block;
-            }
-
-            #carbonads .carbon-text {
-                font-size: 13px;
-                padding: 10px;
-                margin-bottom: 16px;
-                line-height: 1.5;
-                text-align: left;
-            }
-
-            #carbonads .carbon-poweredby {
-                display: block;
-                padding: 6px 8px;
-                background: #f1f1f2;
-                text-align: center;
-                text-transform: uppercase;
-                letter-spacing: 0.5px;
-                font-weight: 600;
-                font-size: 8px;
-                line-height: 1;
-                border-top-left-radius: 3px;
-                position: absolute;
-                bottom: 0;
-                right: 0;
-            }
-        </style>
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-922Z47NPS0"></script>
@@ -303,14 +229,6 @@
                 >
                     <div class="d-md-none d-block mt-5">&nbsp;</div>
                     <div class="row mb-4">
-                        <div class="col-lg-3 col-md-4 order-md-1 order-2 mt-md-3">
-                            <script
-                                async
-                                type="text/javascript"
-                                src="//cdn.carbonads.com/carbon.js?serve=CEAI6KJL&placement=particlesjsorg"
-                                id="_carbonads_js"
-                            ></script>
-                        </div>
                         <div class="col-lg-6 col-md-4 text-center order-md-2 order-1">
                             <div class="row mb-4">
                                 <div class="col text-center">
@@ -716,7 +634,9 @@
             src="https://connect.facebook.net/it_IT/sdk.js#xfbml=1&version=v10.0&appId=130672560341873&autoLogAppEvents=1"
             nonce="jC6Fjy00"
         ></script>
-        <script defer src="https://cdn.jsdelivr.net/npm/@tsparticles/all@3.7.1/tsparticles.all.bundle.min.js"></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1784552607103901"
+     crossorigin="anonymous"></script>
+        <script defer src="https://cdn.jsdelivr.net/npm/@tsparticles/all@3.8.1/tsparticles.all.bundle.min.js"></script>
         <script defer src="https://cdn.jsdelivr.net/npm/object-gui@2.0.2/dist/js/object-gui.min.js"></script>
         <script defer src="https://cdn.jsdelivr.net/npm/@tsparticles/editor@3.1.1/tsparticles.editor.min.js"></script>
         <script defer src="/js/index.min.js"></script>
